--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
     </main>
 
     <footer>
-        <a href="https://www.flaticon.com/free-icons/trash" title="trash icons">Trash icons created by Freepik - Flaticon</a>
+        <p class="center">Trash icons created by 
+            <a href="https://www.flaticon.com/free-icons/trash" title="trash icons">Freepik - Flaticon</a>
+        </p>
+        <p class="center">Copyright &copy; 
+            <script>document.write(new Date().getFullYear())</script> 
+            <a href="https://github.com/jugglingdev/" target="_blank">jugglingdev <img src="./assets/github-mark/github-mark.svg" alt="GitHub social icon"></a>
+        </p>
     </footer>
     
 </body>
