--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Todo App</h1>
 
         <form class="todo-form">
-            <div class="form-input">
+            <div class="form-top">
                 <input type="text" placeholder="Add your new todo">
                 <button class="addTodo">+</button>
             </div>
