Updated plus sign to full width

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form class="todo-form">
             <div class="form-top">
                 <input type="text" placeholder="Add your new todo">
-                <button class="addTodo" type="submit">+</button>
+                <button class="addTodo" type="submit">&#65291;</button>
             </div>
 
             <div class="form-todos">
