Updated delete icon and attribution

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </main>
 
     <footer>
-        <p class="center">Trash icons created by 
-            <a href="https://www.flaticon.com/free-icons/trash" title="trash icons">Freepik - Flaticon</a>
+        <p class="center">Trashcan icon created by 
+            <a href="https://www.flaticon.com/free-icons/miscellaneous" title="miscellaneous icons">kliwir art</a>
         </p>
         <p class="center">Copyright &copy; 
             <script>document.write(new Date().getFullYear())</script> 
